--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -1,24 +1,22 @@
-<div
-      *ngIf="bookError$ | async"
-      style="background-color: red; padding: 10px"
-    > SERVER ERROR</div>
+<div *ngIf="bookError$ | async" style="background-color: red; padding: 10px">
+  SERVER ERROR
+</div>
 
-    <form #f="ngForm" (ngSubmit)="addBookHandler(f)">
-      <input type="text" name="title" [ngModel]="(bookActive$ | async)?.title" required>
-      <input type="text" name="author" [ngModel]="(bookActive$ | async)?.author?.givenName" required>
-      <input type="text" name="ISBN" [ngModel]="(bookActive$ | async)?.ISBN" required>
-      <button type="submit" [disabled]="f.invalid">SAVE</button>
-      <button type="button" (click)="resetHandler(f)">RESET</button>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-xl-6">
+      <app-book-form [bookActive$]="bookActive$" [authors$]="authors$">
+      </app-book-form>
+    </div>
 
-    <hr>
-    <li
-      *ngFor="let book of (books$ | async)"
-      (click)="setActiveBookHandler(book)"
-      [style.color]="book.id === (bookActive$ | async)?.id ? 'orange' : null "
-    >
-      {{book.title}} - {{ book.ISBN}} - {{ book.author.givenName}}
+    <div class="col-sm-12 col-md-12 col-xl-6">
+      <app-books-list [books$]="books$" [bookActive$]="bookActive$">
+      </app-books-list>
+    </div>
 
-      <button (click)="deleteBookHandler(book.id, $event)">delete</button>
-    </li>
-    <hr>
+    <div class="col-sm-12 col-md-12 col-xl-6">
+      <app-books-list [books$]="books$" [bookActive$]="bookActive$">
+      </app-books-list>
+    </div>
+  </div>
+</div>
